--- a/bank-statements-api/pyproject.toml
+++ b/bank-statements-api/pyproject.toml
@@ -21,11 +21,14 @@ SQLAlchemy = "^2.0.29"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
 python-dotenv = "^1.0.1"
 uvicorn = "^0.34.2"
+greenlet = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 httpx = "^0.27.0"
 pytest-asyncio = "^0.23.6"
+alembic = "^1.15.2"
+psycopg2-binary = "^2.9.10"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
