ifx db configuration

--- a/bank-statements-api/alembic.ini
+++ b/bank-statements-api/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql://postgres:postgres@db:5432/statements
+sqlalchemy.url = env:DATABASE_URL
 
 [loggers]
 keys = root,sqlalchemy,alembic
