--- a/bank-statements-web/tsconfig.json
+++ b/bank-statements-web/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
+    "lib": ["ES2015", "DOM"],
     "jsx": "react-jsx",
     "strict": true,
     "esModuleInterop": true,
@@ -10,7 +11,14 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "noEmit": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": [
+      "jest",
+      "node"
+    ]
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "tests"
+  ]
 }
