--- a/bank-statements-api/.env.example
+++ b/bank-statements-api/.env.example
@@ -1,3 +1,4 @@
 # Example environment for bank-statements-api
-DATABASE_URL=postgresql+asyncpg://user:password@host:port/dbname
+DATABASE_URL=postgresql://postgres:postgres@db:5432/statements
+ASYNC_DATABASE_URL=postgresql+asyncpg://user:password@host:port/dbname
 ENV=development
