--- a/bank-statements-web/package.json
+++ b/bank-statements-web/package.json
@@ -14,12 +14,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.4.0",
-    "vite": "^5.2.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "@testing-library/react": "^14.2.1",
-    "playwright": "^1.43.1"
+    "playwright": "^1.43.1",
+    "typescript": "^5.4.0",
+    "vite": "^5.2.0"
   }
 }
