--- a/bank-statements-web/package.json
+++ b/bank-statements-web/package.json
@@ -21,9 +21,16 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "babel-jest": "^29.7.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
     "jest": "^29.7.0",
     "playwright": "^1.43.1",
+    "prettier": "^3.5.3",
     "typescript": "^5.4.0",
     "vite": "^5.2.0"
   }
